Fix some form element spacing issues

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -1,5 +1,10 @@
 ﻿@import "../../map_modules/variables";
 
+.form-section-title {
+    margin-bottom: 1em;
+    border-bottom: 1px solid $charcoal;
+}
+
 .form-element-container {
     margin-bottom: 1.5em;
     opacity: 1;
